# unicode-segmentation-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
src/: lib.rs
tests/: test_gettext_wrap.py  test_readme_examples.py  test_unicode_segmentation.py
