[build-system]
requires = ["maturin>=1.10.0,<2.0"]
build-backend = "maturin"

[project]
name = "unicode-segmentation-rs"
version = "0.1.0"
description = "Python bindings for the Rust unicode-segmentation crate"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
